# MLKEM_server_ESP32

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  fix-mlkem-defs.sh  sdkconfig.defaults
components/mlkem/: CMakeLists.txt  CMakeLists.txt.bak.20250906-151406
components/mlkem/include/: mlkem_wrap.h
components/mlkem/src/: keccak_endian_fix.h  keccakf1600.c  kem_shim.c  mlkem_wrap.c  randombytes.h  randombytes_esp.c
host_test/: loop_handshakes.sh  mlkem_client  mlkem_client.c  mlkem_client.c.bak  randombytes_posix.c
main/: CMakeLists.txt  CMakeLists.txt.bak  mlkem_server.c  mlkem_server.c.bak  mlkem_server_working.c.bak
